--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goit-react-native-hw-02",
+  "name": "goit-react-native-hw-03",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,16 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.9",
+    "expo": "^47.0.5",
+    "expo-font": "~11.0.1",
+    "expo-image-picker": "~14.0.2",
+    "expo-screen-orientation": "~5.0.1",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.4",
+    "react": "18.1.0",
     "react-icons": "^4.8.0",
     "react-native-vector-icons": "^9.2.0",
-    "expo-image-picker": "~14.1.1",
-    "expo-screen-orientation": "~5.1.1",
-    "expo-splash-screen": "~0.18.1",
-    "expo-font": "~11.1.1"
+    "react-native": "0.70.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
